    via ozawa)

    YARN-3354. Add node label expression in ContainerTokenIdentifier to support
    RM recovery. (Wangda Tan via jianhe)

    YARN-1402. Update related Web UI and CLI with exposing client API to check
    log aggregation status. (Xuan Gong via junping_du)

    YARN-3463. Integrate OrderingPolicy Framework with CapacityScheduler.
    (Craig Welch via wangda)

  IMPROVEMENTS

    YARN-3243. CapacityScheduler should pass headroom from parent to children
    to make sure ParentQueue obey its capacity limits. (Wangda Tan via jianhe)

<<<<<<< HEAD
=======
    YARN-3273. Improve scheduler UI to facilitate scheduling analysis and
    debugging. (Rohith Sharmaks via jianhe)

    YARN-3357. Move TestFifoScheduler to FIFO package. (Rohith Sharmaks 
    via devaraj)

<<<<<<< HEAD
>>>>>>> a888dac... YARN-3357. Move TestFifoScheduler to FIFO package. Contributed by Rohith
=======
    YARN-3356. Capacity Scheduler FiCaSchedulerApp should use ResourceUsage to
    track used-resources-by-label. (Wangda Tan via jianhe)

<<<<<<< HEAD
>>>>>>> a3a155a... YARN-3356. Capacity Scheduler FiCaSchedulerApp should use ResourceUsage to track used-resources-by-label. Contributed by Wangda Tan
=======
    YARN-3350. YARN RackResolver spams logs with messages at info level. 
    (Wilfred Spiegelenburg via junping_du)

    YARN-2868. FairScheduler: Metric for latency to allocate first container 
    for an application. (Ray Chiang via kasha)

<<<<<<< HEAD
>>>>>>> 4e0c487... YARN-2868. FairScheduler: Metric for latency to allocate first container for an application. (Ray Chiang via kasha)
=======
    YARN-3397. yarn rmadmin should skip -failover. (J.Andreina via kasha)

<<<<<<< HEAD
>>>>>>> 2158cd2... YARN-3397. yarn rmadmin should skip -failover. (J.Andreina via kasha)
=======
    YARN-3288. Document and fix indentation in the DockerContainerExecutor code

    YARN-2495. Allow admin specify labels from each NM (Distributed 